--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
               <a class="nav__link" href="#events">Eventos</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Conviértete en miembro</a>
+              <a class="nav__link" href="#membership">Conviértete en miembro</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Contactos</a>
+              <a class="nav__link" href="#footer">Contactos</a>
             </li>
           </ul>
         </nav>
@@ -125,7 +125,7 @@
             </li>
           </ul>
         </section>
-        <section class="events">
+        <section id="events" class="events">
           <div class="events__content">
             <h2 class="events__heading">Próximos eventos:</h2>
             <h3 class="events__title">
@@ -162,7 +162,7 @@
             </p>
             <a href="#" class="events__more">Más eventos &rarr;</a>
           </div>
-          <div id="events" class="events__cover">
+          <div class="events__cover">
             <img
               class="events__image"
               src="./images/cafe.png"
@@ -211,7 +211,110 @@
             </div>
           </div>
         </section>
+        <section id="membership" class="membership">
+          <h2 class="membership__title">
+            ¡Convertirse en miembro es muy fácil!
+          </h2>
+          <ul class="membership__steps">
+            <li class="step">
+              <h3 class="step__title">
+                Paso 1
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Completa el formulario de afiliación en línea o en persona.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 2
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Ven y recoge tu credencial de la biblioteca en la recepción.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 3
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">Firma el envés de la tarjeta.</p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 4
+                <img
+                  src="./images/icon_step_finish.svg"
+                  alt="icon finish"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                ¡Disfruta de los increíbles beneficios de nuestra membresía!
+              </p>
+            </li>
+          </ul>
+        </section>
       </main>
+      <footer id="footer" class="footer">
+        <section class="footer__content">
+          <div class="footer__columns">
+            <div class="footer__column footer__logo">
+              <img
+                class="footer__logo"
+                src="./images/logo_white.svg"
+                alt="footer-logo"
+              />
+            </div>
+            <div class="footer__column footer__column_content_hours">
+              <h3 class="footer__column-heading">Horario de apertura</h3>
+              <ul class="footer__list">
+                <li class="footer__list-item">
+                  Lunes a Viernes: 9 A.M. -- 8 P.M.
+                </li>
+                <li class="footer__list-item">
+                  Sabados y Domingos: 10 A.M. -- 6P.M.
+                </li>
+              </ul>
+            </div>
+            <div class="footer__column footer__column_content_social">
+              <h3 class="footer__column-heading">Redes sociales</h3>
+              <ul class="footer__list">
+                <li class="footer__list-item">
+                  <img
+                    class="footer__social-icon"
+                    src="./images/facebook_white.svg"
+                    alt="facebook-icon"
+                  />
+                  <a class="footer__column-link" href="#">Facebook</a>
+                </li>
+                <li class="footer__list-item">
+                  <img
+                    class="footer__social-icon"
+                    src="./images/instagram_white.svg"
+                    alt="instagram-icon"
+                  />
+                  <a class="footer__column-link" href="#">Instagram</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <p class="footer__copyright">©️ 2024 Esteban Prieto</p>
+        </section>
+      </footer>
     </div>
   </body>
 </html>
