--- a/index.html
+++ b/index.html
@@ -269,51 +269,53 @@
           </ul>
         </section>
       </main>
-      <footer id="footer" class="footer">
-        <section class="footer__content">
-          <div class="footer__columns">
-            <div class="footer__column footer__logo">
-              <img
-                class="footer__logo"
-                src="./images/logo_white.svg"
-                alt="footer-logo"
-              />
-            </div>
-            <div class="footer__column footer__column_content_hours">
-              <h3 class="footer__column-heading">Horario de apertura</h3>
-              <ul class="footer__list">
-                <li class="footer__list-item">
-                  Lunes a Viernes: 9 A.M. -- 8 P.M.
-                </li>
-                <li class="footer__list-item">
-                  Sabados y Domingos: 10 A.M. -- 6P.M.
-                </li>
-              </ul>
-            </div>
-            <div class="footer__column footer__column_content_social">
-              <h3 class="footer__column-heading">Redes sociales</h3>
-              <ul class="footer__list">
-                <li class="footer__list-item">
+      <footer class="footer">
+        <div class="footer__columns">
+          <div class="footer__column">
+            <img
+              class="footer__logo"
+              src="./images/logo_white.svg"
+              alt="footer-logo"
+            />
+          </div>
+          <div class="footer__column footer__column_content_hours">
+            <h3 class="footer__column-heading">Horario de apertura</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                Lunes a Viernes: 9 A.M. -- 8 P.M.
+              </li>
+              <li class="footer__list-item">
+                Sabados y Domingos: 10 A.M. -- 6P.M.
+              </li>
+            </ul>
+          </div>
+          <div class="footer__column footer__column_content_social">
+            <h3 class="footer__column-heading">Redes sociales</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a class="footer__column-link" href="#">
                   <img
                     class="footer__social-icon"
                     src="./images/facebook_white.svg"
                     alt="facebook-icon"
                   />
-                  <a class="footer__column-link" href="#">Facebook</a>
-                </li>
-                <li class="footer__list-item">
+                  Facebook</a
+                >
+              </li>
+              <li class="footer__list-item">
+                <a class="footer__column-link" href="#">
                   <img
                     class="footer__social-icon"
                     src="./images/instagram_white.svg"
                     alt="instagram-icon"
                   />
-                  <a class="footer__column-link" href="#">Instagram</a>
-                </li>
-              </ul>
-            </div>
+                  instagram
+                </a>
+              </li>
+            </ul>
           </div>
-          <p class="footer__copyright">©️ 2024 Esteban Prieto</p>
-        </section>
+        </div>
+        <p class="footer__copyright">©️ 2024 Esteban Prieto</p>
       </footer>
     </div>
   </body>
